--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
+    "googleapis": "^146.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next-themes": "latest",
+    "node-fetch": "^3.3.2",
     "react": "^19",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19",
